# Stellar-Level-2-DApp

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup_log.txt
.github/workflows/: ci.yml
contracts/milestone/: Cargo.toml
contracts/milestone/src/: lib.rs  test.rs
contracts/milestone/test_snapshots/test/: test_contribute.1.json  test_create_project.1.json  test_create_vault.1.json  test_deposit_increases_balance.1.json  test_milestone_and_token_integration.1.json  test_withdraw_fail_target_not_met.1.json  test_withdraw_fails_too_early.1.json  test_withdraw_success.1.json  test_withdraw_when_goal_met.1.json  test_withdraw_when_time_expired.1.json
contracts/poll/: Cargo.toml
contracts/poll/src/: lib.rs
contracts/sxlm-token/: Cargo.toml
contracts/sxlm-token/src/: lib.rs
contracts/sxlm-token/test_snapshots/test/: test_mint_burn.1.json
scripts/: check.js  deploy.js  deploy_level4.cjs  final_deploy_l4.cjs  setup_vault.js
src/: App.css  App.tsx
src/lib/: stellar.ts
